# pii_scrub_agent

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
docs/: initial_scan.md
scripts/: initial_scan.py  test_initial_scan.py
src/pii_scrub_agent/: __init__.py  initial_scan.py  llm_client.py  paths.py
src/pii_scrub_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pii_scrub_agent/prompts/: initial_scan.txt
